--- a/package.json
+++ b/package.json
@@ -1,16 +1,29 @@
 {
-  "name": "ship",
+  "name": "sea-wars-battleship",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "A real-time multiplayer Battleship game built with Node.js, Express, and Socket.IO",
+  "main": "server.js",
   "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "battleship",
+    "game",
+    "multiplayer",
+    "socket.io",
+    "nodejs",
+    "realtime"
+  ],
+  "author": "Your Name",
   "license": "ISC",
   "dependencies": {
     "express": "^5.1.0",
+    "html-entities": "^1.4.0",
     "socket.io": "^4.8.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.0"
   }
 }
